--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
     "@bpmn-io/add-exporter": "^0.2.0",
     "@bpmn-io/align-to-origin": "^0.6.0",
     "@bpmn-io/dmn-migrate": "^0.4.3",
@@ -20,12 +18,16 @@
     "bpmn-js-properties-panel": "^0.37.1",
     "bpmn-js-signavio-compat": "^1.2.2",
     "camunda-bpmn-moddle": "^4.4.0",
+    "core-js": "^3.6.5",
     "diagram-js": "^6.7.1",
     "diagram-js-direct-editing": "^1.6.1",
     "diagram-js-minimap": "^2.0.3",
     "diagram-js-origin": "^1.3.1",
+    "element-ui": "^2.14.1",
     "ids": "^1.0.0",
-    "min-dash": "^3.5.2"
+    "min-dash": "^3.5.2",
+    "v-contextmenu": "^2.9.0",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
