--- a/package.json
+++ b/package.json
@@ -36,27 +36,15 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
     "eslint-plugin-prettier": "^3.1.1",
-    "vue-template-compiler": "^2.6.11",
-    "prettier": "1.19.1",
+    "eslint-plugin-vue": "^6.2.2",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "raw-loader": "^1.0.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
+    "node-sass": "^5.0.0",
+    "prettier": "1.19.1",
+    "raw-loader": "^1.0.0",
+    "sass-loader": "^10.1.0",
+    "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
     "> 1%",
